<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="41dp"
        android:layout_y="-16dp"
        android:text="@string/Equipo_de_proteccion_personal" />
  <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:text="@string/Nombre_del_trabajador"
      />
    <CheckBox
        android:id="@+id/chbx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="52dp"
        android:text="@string/Guantes" />

    <CheckBox
        android:id="@+id/chbx4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chbx2"
        android:text="@string/Reflectante" />

    <CheckBox
        android:id="@+id/chbx5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chbx4"
        android:text="@string/Antiparra" />

    <CheckBox
        android:id="@+id/chbx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chbx5"
        android:text="@string/Casco" />

    <CheckBox
        android:id="@+id/chbx6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chbx1"
        android:text="@string/Arnes_de_seguridad" />

    <CheckBox
        android:id="@+id/chbx7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chbx6"
        android:text="@string/Zapatos_de_seguridad" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chbx7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/Controlar"/>
    
</RelativeLayout>